# agrichat-annam

./: .env  .gitignore  20 Q-A.opus  404.html  Final-agritext-classifier.ipynb  Modelfile-llama3.1-optimized  Modelfile.optimized  README.md  SETUP_LOCAL_BACKEND.md  SSL_SOLUTION.md  State_wise_data_cleaning_last_step.ipynb  VERIFICATION_CHECKLIST.md  agri_text_classification.ipynb  app.py  bad_text_classifier.ipynb  bad_words.txt  build_pops_collection.py  check-ngrok-url.js  chroma_pops_builder.py  datacleaning_secondary_state.ipynb  debug-api-config.js  docker-compose.yml  fallback_queries.csv  generate-ssl.ps1  generate-ssl.sh  index.html  install-nvidia-docker.sh  install.sh  main_query_final.json  optimize_h100.sh  performance_summary.sh  performance_test.sh  render.yaml  requirement.txt  restart-ngrok.ps1  session_query_response.json  session_response.json  setup-ngrok-auth.ps1  setup_local_llm.sh  sitemap.xml  (+9 more)
Agri data/: Agridata AP Questions - Sheet1.csv  Agridata HR Questions - Sheet1.csv  Agridata MH Questions - Sheet1.csv  Agridata MP Questions - Sheet1.csv  Agridata PB Questions - Sheet1.csv  Agridata TN Questions - Sheet1.csv
RAG pipeline v1/: app.py  automation.py  creating_database.py  markdown_parser.py  (+2 more)
agrichat-backend/RAG Pipelines/RAG pipeline v2/: Data Preprocessing.ipynb  app.py  pyproject.toml  requirements.txt  testing.py
agrichat-backend/RAG Pipelines/RAG pipeline v2/ChromaDb/: chroma.sqlite3
agrichat-backend/RAG Pipelines/RAG pipeline v2/chroma_db/: chroma.sqlite3
agrichat-backend/RAG Pipelines/RAG pipeline v2/templates/: index.html
(+560 files in other folders)
