[project]
name = "testcode"
version = "0.1.0"
description = ""
authors = [
    {name = "Aman-k amankatiyar079@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain-community (>=0.3.21,<0.4.0)",
    "openai (>=1.73.0,<2.0.0)",
    "chromadb (>=1.0.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
